# gtest-cmake-example

./: CMakeLists.txt  README  clean_cmake.sh
include/: example.h
src/: CMakeLists.txt  example.cc
src_test/: CMakeLists.txt  example_test.cc
